[project]
name = "barista"
version = "0.1.0"
description = "A Python and Jsonnet framework for handling espanso configurations"
authors = [{ name = "Jeppe Klitgaard", email = "hi@jeppe.science" }]
# requires-python = "~=3.11"
requires-python = ">=3.13,<4"
license = "MIT"
dependencies = [
    "gojsonnet==0.21.0rc2",
    "PyYAML~=6.0",
    "click>=8.0.3",
    "pydantic>=2.5.2",
]

[project.scripts]
barista = "barista.__main__:run"

[dependency-groups]
dev = [
    "types-PyYAML>=6.0.1",
    "pytest>=6.2.5,<7",
    "mypy>=1.15.0",
    "poethepoet>=0.33.0",
    "ipykernel>=6.29.5",
    "ruff>=0.9.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.10"
strict = true
show_error_codes = true
plugins = [
    "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = [
    "_gojsonnet.*",
    "_jsonnet.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 100

[tool.poe.tasks]
mypy = "mypy ./barista"
ruff_check = "ruff check ."

jsonnetfmt = "jsonnetfmt -i **/*.jsonnet"

test = "pytest ."

lint = [
    "ruff_check",
    "mypy",
]


fix = [
    "ruff_check",
    "jsonnetfmt",
]

verify = [
    "test",
    "lint",
]
